seeds-web/seeds-admin-web.yml
apiVersion: v1
kind: Service
metadata:
  name: seeds-admin-web
  namespace: seeds-uat
spec:
  selector:
    app: seeds-admin-web
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seeds-admin-web
  namespace: seeds-uat 
  labels: 
    app: seeds-admin-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seeds-admin-web
  template:
    metadata:
      labels:
        app: seeds-admin-web
    spec:
      containers:
      - name: seeds-admin-web
        image: harbor.seedslabs.io/seeds-web/seeds-admin-web
        # readinessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 20
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        resources: {}
          # limits:
          #   memory: "128Mi"
          #   cpu: "250m"
        volumeMounts:
        - name: nginx-admin-web 
          mountPath: /etc/nginx/nginx.conf
          subPath: uat-admin.seedslabs.io.conf
      volumes:
      - name: nginx-admin-web 
        configMap: 
          name: nginx-admin-web
      # 使用 harbor 的密文（Rancher 中已添加）
      nodeSelector:
        usefulness: seeds
      imagePullSecrets:
        - name: harbor-uat
