seeds-web/seeds-web-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: seeds-web-nginx
  namespace: seeds-uat 
spec:
  selector:
    app: seeds-web-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seeds-web-nginx
  namespace: seeds-uat 
  labels: 
    app: seeds-web-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seeds-web-nginx
  template:
    metadata:
      labels:
        app: seeds-web-nginx
    spec:
      containers:
      - name: seeds-web-nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        # readinessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 20
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        resources: {}
          # limits:
          #   memory: "250Mi"
          #   cpu: "250m"
        volumeMounts:
        - name: nginx-web
          mountPath: /etc/nginx/nginx.conf
          subPath: uat.seedslabs.io.conf 
      volumes:
      - name: nginx-web
        configMap: 
          name: nginx-web
      nodeSelector:
        usefulness: seeds
