seeds-web/seeds-web.yml
apiVersion: v1
kind: Service
metadata:
  name: seeds-web
  namespace: seeds-uat 
spec:
  selector:
    app: seeds-web
  ports:
  - name: http
    port: 8001
    targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seeds-web
  namespace: seeds-uat 
  labels: 
    app: seeds-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seeds-web
  template:
    metadata:
      labels:
        app: seeds-web
    spec:
      containers:
      - name: seeds-web
        image: harbor.seedslabs.io/seeds-web/seeds-web
        ports:
        - containerPort: 8001
        # readinessProbe:
        #   tcpSocket:
        #     port: 8001
        #   initialDelaySeconds: 20
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        # livenessProbe:
        #   tcpSocket:
        #     port: 8001
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        resources: {}
          # limits:
          #   memory: "250Mi"
          #   cpu: "250m"
      nodeSelector:
        usefulness: seeds
      imagePullSecrets:
        - name: harbor-uat
